[gd_scene load_steps=5 format=1]

[ext_resource path="res://scripts/special-enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/invaders4.tex" type="Texture" id=2]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( -7.93771, 13.6457, -25.2934, 1.97001, 0.424583, -21.2235, 0.109032, 9.54341 )

[sub_resource type="ConvexPolygonShape2D" id=2]

custom_solver_bias = 0.0
points = Vector2Array( 0.109032, 9.54341, 0.424583, -21.2235, 24.407, 2.28556, 8.15577, 13.6457 )

[node name="enemyS" type="Area2D" groups=[ "bombers", "enemies" ]]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )
points = 100

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

build_mode = 0
polygon = Vector2Array( 0.424583, -21.2235, 24.407, 2.28556, 8.15577, 13.6457, 0.109032, 9.54341, -7.93771, 13.6457, -25.2934, 1.97001 )
shape_range = Vector2( 0, 1 )
trigger = false

[node name="shootFrom" type="Position2D" parent="."]

transform/pos = Vector2( 0, 30 )

[node name="visibility" type="VisibilityNotifier2D" parent="."]

rect = Rect2( -10, -10, 20, 20 )

[node name="score" type="Label" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -20.0
margin/top = -7.0
margin/right = 20.0
margin/bottom = 7.0
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ScoreDisplayTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="exit_screen" from="visibility" to="." method="_on_visibility_exit_screen"]

[connection signal="timeout" from="ScoreDisplayTimer" to="." method="_on_ScoreDisplayTimer_timeout"]


